Rename a few things from ov to openvols (#81)
`ov` was set as the prefix for entrypoints, and it got picked as the prefix for the cookie session name. This change moves those uses to `openvols` instead of using an abbreviation that isn't noted anywhere.
